# chronicle

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
docs/: PLUGINS.md
e2e/: fixtures.ts  graph.spec.ts  notes.spec.ts  search.spec.ts  shortcuts.spec.ts
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: performance.rs
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: config.rs  daily.rs  graph.rs  mod.rs  notes.rs  publish.rs  search.rs  sync.rs  tags.rs  vault.rs
src-tauri/src/db/: links.rs  mod.rs  notes.rs  schema.rs  search.rs  tags.rs
src-tauri/src/models/: mod.rs
src-tauri/src/sync/: conflict.rs  git.rs  mod.rs  status.rs
src-tauri/src/vault/: indexer.rs  mod.rs  parser.rs  watcher.rs
src/lib/: shortcuts.ts
src/lib/api/: tauri.ts
src/lib/components/common/: CommandPalette.svelte  QuickOpen.svelte
src/lib/components/editor/: BacklinksPanel.svelte  CodeMirrorEditor.svelte  Editor.svelte  EditorToolbar.svelte  LinkAutocomplete.svelte  MarkdownPreview.svelte  StatusBar.svelte  wikiLinkPlugin.ts
src/lib/components/graph/: GraphView.svelte
src/lib/components/plugins/: PluginManager.svelte  PluginSettings.svelte  PluginSidebar.svelte  (+1 more)
src/lib/plugins/: api.ts  index.ts  loader.ts  tauri-fs.d.ts  types.ts
src/lib/stores/: config.ts  editor.ts  graph.ts  index.ts  plugins.ts  search.ts  sync.ts  vault.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/graph/: +page.svelte
src/routes/settings/: +page.svelte
(+8 files in other folders)
